--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,18 +1,3 @@
-/*! Global  */
-:root {
-  --color-subtitle: #363f5f;
-  --color-table-title: #363f5f;
-  --color-table-text: #969cb3;
-  --color-total-card: #49aa26;
-}
-
-* {
-  user-select: none;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 #page-home {
   background: #f0f2f5;
   font-family: "Poppins", sans-serif;
@@ -38,19 +23,9 @@ h2 {
   text-align: center;
 }
 
-#page-home header #logo {
-  color: #fff;
-  font-weight: 100;
-}
-
 /*! Balance  */
 #page-home .container #balance {
-  margin-top: -8rem;
-}
-
-#page-home .container #balance h2 {
-  margin-top: 0;
-  color: #fff;
+  margin-top: -4.5rem;
 }
 
 /*! Cards  */
@@ -69,6 +44,10 @@ h2 {
 #page-home .container #balance .card h3 {
   font-weight: 400;
   font-size: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #page-home .container #balance .card p {
@@ -77,7 +56,46 @@ h2 {
   margin-top: 0.8rem;
 }
 
+/*! Modal Form */
+#portal #form {
+  max-width: 500%;
+}
+
+#portal #form h2 {
+  margin-top: 0;
+}
+#portal #form .input-group {
+  margin-top: 0.8rem;
+}
+
+#portal #form form input {
+  border: none;
+  outline-style: none;
+  padding: 0.7rem;
+  width: 100%;
+}
+
+#portal #form .input-group small {
+  opacity: 0.6;
+}
+
+#portal #form .input-group.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#portal #form .input-group.actions button {
+  width: 48%;
+}
+
 /*! Transactions Table  */
+#page-home .container #transaction {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+}
+
 #page-home .container #transaction #transactions-table {
   width: 100%;
   border-spacing: 0 0.4rem;
@@ -87,7 +105,7 @@ h2 {
   color: var(--color-table-title);
 }
 
-#page-home .container #transaction #transactions-table th {
+#page-home .container #transaction #transactions-table thead th {
   background: #fff;
   font-weight: 400;
   padding: 1rem 2rem;
@@ -106,26 +124,43 @@ h2 {
   opacity: 1;
 }
 
-#page-home .container #transaction #transactions-table td {
+#page-home .container #transaction #transactions-table tbody td {
   background: #fff;
   padding: 1rem 2rem;
 }
 
-#page-home .container #transaction #transactions-table td.description {
+#page-home .container #transaction #transactions-table tbody td.description {
   color: var(--color-table-title);
 }
 
-#page-home .container #transaction #transactions-table td.income {
+#page-home .container #transaction #transactions-table tbody td.income {
   color: #12a454;
 }
 
-#page-home .container #transaction #transactions-table td.expense {
+#page-home .container #transaction #transactions-table tbody td.expense {
   color: #e92929;
+}
+
+#page-home
+  .container
+  #transaction
+  #transactions-table
+  tbody
+  tr
+  td:last-child
+  img {
+  display: flex;
+  justify-content: center;
 }
 
 #page-home .container #transaction #transactions-table thead tr th:first-child,
 #page-home .container #transaction #transactions-table tbody tr td:first-child {
-  border-radius: 0.25rem 0 0 0.25rem;
+  border-radius: 0.4rem 0 0 0.4rem;
+}
+
+#page-home .container #transaction #transactions-table thead tr th:last-child,
+#page-home .container #transaction #transactions-table tbody tr td:last-child {
+  border-radius: 0 0.4rem 0.4rem 0;
 }
 
 /*! Footer  */
@@ -133,4 +168,13 @@ footer {
   text-align: center;
   padding: 4rem 0 2rem;
   opacity: 0.6;
+}
+
+/*! Responsividade */
+@media (min-width: 768px) {
+  #page-home .container #balance {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2rem;
+  }
 }
