--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -16,6 +16,23 @@ h2 {
   font-weight: 400;
 }
 
+/*! Links & Buttons  */
+.button.new {
+  background-color: #f0f2f5;
+  color: var(--color-button);
+  border: none;
+  font: 400 1rem Poppins;
+  outline-style: none;
+  cursor: pointer;
+  display: inline-block;
+  margin-bottom: 0.8rem;
+  transition: all 0.4s;
+}
+
+.button.new:hover {
+  color: var(--color-button-light);
+}
+
 /*! Header  */
 #page-home header {
   background: #2d4a22;
@@ -86,7 +103,34 @@ h2 {
 }
 
 #portal #form .input-group.actions button {
+  cursor: pointer;
   width: 48%;
+  height: 50px;
+  border: none;
+  border-radius: 0.25rem;
+  background: var(--color-button);
+  color: #fff;
+  padding: 0;
+  transition: all 0.4s;
+  font-family: Poppins;
+  outline-style: none;
+}
+
+#portal #form .input-group.actions button:hover {
+  background: var(--color-button-light);
+}
+
+#portal #form .input-group.actions .button.cancel {
+  color: var(--color-secondary-button);
+  border: 2px solid var(--color-secondary-button);
+  background: var(--color-modal-background);
+  opacity: 0.6;
+  transition: opacity 0.4s;
+  outline-style: none;
+}
+
+#portal #form .input-group.actions .button.cancel:hover {
+  opacity: 1;
 }
 
 /*! Transactions Table  */
@@ -112,54 +156,11 @@ h2 {
   text-align: left;
 }
 
-#page-home .container #transaction #transactions-table tbody {
-  color: var(--color-table-text);
-}
-
-#page-home .container #transaction #transactions-table tbody tr {
-  opacity: 0.75;
-}
-
-#page-home .container #transaction #transactions-table tbody tr:hover {
-  opacity: 1;
-}
-
-#page-home .container #transaction #transactions-table tbody td {
-  background: #fff;
-  padding: 1rem 2rem;
-}
-
-#page-home .container #transaction #transactions-table tbody td.description {
-  color: var(--color-table-title);
-}
-
-#page-home .container #transaction #transactions-table tbody td.income {
-  color: #12a454;
-}
-
-#page-home .container #transaction #transactions-table tbody td.expense {
-  color: #e92929;
-}
-
-#page-home
-  .container
-  #transaction
-  #transactions-table
-  tbody
-  tr
-  td:last-child
-  img {
-  display: flex;
-  justify-content: center;
-}
-
-#page-home .container #transaction #transactions-table thead tr th:first-child,
-#page-home .container #transaction #transactions-table tbody tr td:first-child {
+#page-home .container #transaction #transactions-table thead tr th:first-child {
   border-radius: 0.4rem 0 0 0.4rem;
 }
 
-#page-home .container #transaction #transactions-table thead tr th:last-child,
-#page-home .container #transaction #transactions-table tbody tr td:last-child {
+#page-home .container #transaction #transactions-table thead tr th:last-child {
   border-radius: 0 0.4rem 0.4rem 0;
 }
 
