--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -19,7 +19,7 @@ h2 {
 /*! Links & Buttons  */
 .button.new {
   background-color: #f0f2f5;
-  color: var(--color-button);
+  color: var(--color-green);
   border: none;
   font: 400 1rem Poppins;
   outline-style: none;
@@ -30,14 +30,28 @@ h2 {
 }
 
 .button.new:hover {
-  color: var(--color-button-light);
+  color: var(--color-green-dark);
 }
 
 /*! Header  */
 #page-home header {
-  background: #2d4a22;
+  background: var(--color-header-background);
   padding: 2rem 0 10rem;
   text-align: center;
+}
+
+#page-home header h1 {
+  color: #fff;
+  font: 400 2rem "Yusei Magic";
+}
+
+#page-home header h1 .alternative-text-1 {
+  color: var(--color-red);
+  margin-right: -0.5rem;
+}
+
+#page-home header h1 .alternative-text-2 {
+  color: var(--color-green);
 }
 
 /*! Balance  */
@@ -51,16 +65,16 @@ h2 {
   padding: 1.5rem 2rem;
   border-radius: 0.25rem;
   margin-bottom: 2rem;
-  color: var(--color-subtitle);
+  color: var(--color-font);
 }
 #page-home .container #balance .card.total {
-  background-color: var(--color-total-card);
+  background-color: var(--color-green);
   color: #fff;
 }
 
 #page-home .container #balance .card h3 {
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 1.3rem;
 
   display: flex;
   align-items: center;
@@ -76,6 +90,7 @@ h2 {
 /*! Modal Form */
 #portal #form {
   max-width: 500%;
+  font-family: "Poppins", sans-serif;
 }
 
 #portal #form h2 {
@@ -108,7 +123,7 @@ h2 {
   height: 50px;
   border: none;
   border-radius: 0.25rem;
-  background: var(--color-button);
+  background: var(--color-green);
   color: #fff;
   padding: 0;
   transition: all 0.4s;
@@ -117,12 +132,12 @@ h2 {
 }
 
 #portal #form .input-group.actions button:hover {
-  background: var(--color-button-light);
+  background: var(--color-green-dark);
 }
 
 #portal #form .input-group.actions .button.cancel {
-  color: var(--color-secondary-button);
-  border: 2px solid var(--color-secondary-button);
+  color: var(--color-red);
+  border: 2px solid var(--color-red);
   background: var(--color-modal-background);
   opacity: 0.6;
   transition: opacity 0.4s;
@@ -146,7 +161,7 @@ h2 {
 }
 
 #page-home .container #transaction #transactions-table thead {
-  color: var(--color-table-title);
+  color: var(--color-font);
 }
 
 #page-home .container #transaction #transactions-table thead th {
@@ -168,7 +183,13 @@ h2 {
 footer {
   text-align: center;
   padding: 4rem 0 2rem;
-  opacity: 0.6;
+  opacity: 0.4;
+  color: var(--color-font);
+  transition: opacity 0.4s ease-out;
+}
+
+footer:hover {
+  opacity: 1;
 }
 
 /*! Responsividade */
