update: background color

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -4,6 +4,7 @@
   --color-green-dark: #216b42;
   --color-header-background: #0c331e;
   --color-font: #0c361f;
+  --color-background: #9ee8c0;
   --color-modal-background: #f0f2f5;
 }
 
